--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -1,8 +1,8 @@
 <script>
   MathJax = {
     tex: {
-      inlineMath: [['\\(', '\\)']], // Inline math delimiters
-      displayMath: [['\\[', '\\]']], // Block math delimiters
+      inlineMath: [['$', '$'], ['\\(', '\\)']], // Inline math delimiters
+      displayMath: [['$$', '$$'], ['\\[', '\\]']], // Block math delimiters
       tags: 'ams', // Auto-number equations using AMS style
     },
     options: {
